<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.pax.drinkit.server</groupId>
    <artifactId>drinkit</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <jetty-version>7.5.0.v20110901</jetty-version>
    </properties>

    <name>websocket</name>
    <url>http://maven.apache.org</url>

    <repositories>
        <repository>
            <id>project.local</id>
            <name>project</name>
            <url>file:${project.basedir}/repo</url>
        </repository>

        <repository>
            <id>javacpp</id>
            <name>JavaCPP</name>
            <url>http://maven2.javacpp.googlecode.com/git/</url>
        </repository>
    </repositories>

    <build>
        <defaultGoal>package</defaultGoal>
        <plugins>
            <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <!-- best lock down version of the plugin too -->
            <configuration>
                <source>1.5</source>
                <target>1.5</target>
            </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-websocket</artifactId>
            <version>${jetty-version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlet</artifactId>
            <version>${jetty-version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.5</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20090211</version>
        </dependency>
        <dependency>
            <groupId>com.bridj</groupId>
            <artifactId>bridj</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>com.juv</groupId>
            <artifactId>juv</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>de.huxhorn.sulky</groupId>
            <artifactId>de.huxhorn.sulky.3rdparty.jlayer</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>2.9.1</version>
        </dependency>
      <dependency>
            <groupId>com.phidgets</groupId>
            <artifactId>phidget</artifactId>
            <version>2.1</version>
        </dependency>

    </dependencies>

    <profiles>
        <profile>
            <id>server</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-showversion</argument>
                                <argument>-Xmx512m</argument>
                                <argument>-Xms512m</argument>
                                <argument>-Xmn256m</argument>
                                <argument>-XX:+PrintCommandLineFlags</argument>
                                <argument>-verbose:gc</argument>
                                <!--<argument>-XX:+PrintGCDetails</argument>-->
                                <!--<argument>-XX:+PrintGCDateStamps</argument>-->
                                <argument>-XX:+UseParallelOldGC</argument>
                                <argument>-XX:-UseAdaptiveSizePolicy</argument>
                                <!--<argument>-XX:+UseConcMarkSweepGC</argument>-->
                                <!--<argument>-XX:+UnlockExperimentalVMOptions</argument>-->
                                <!--<argument>-XX:+UseG1GC</argument>-->
                                <argument>-cp</argument>
                                <classpath/>
                                <argument>no.pax.drinkit.Main</argument>
                                <argument>8080</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>webcam</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-showversion</argument>
                                <argument>-Xmx512m</argument>
                                <argument>-Xms512m</argument>
                                <argument>-Xmn256m</argument>
                                <argument>-XX:+PrintCommandLineFlags</argument>
                                <argument>-verbose:gc</argument>
                                <!--<argument>-XX:+PrintGCDetails</argument>-->
                                <!--<argument>-XX:+PrintGCDateStamps</argument>-->
                                <argument>-XX:+UseParallelOldGC</argument>
                                <argument>-XX:-UseAdaptiveSizePolicy</argument>
                                <!--<argument>-XX:+UseConcMarkSweepGC</argument>-->
                                <!--<argument>-XX:+UnlockExperimentalVMOptions</argument>-->
                                <!--<argument>-XX:+UseG1GC</argument>-->
                                <argument>-cp</argument>
                                <classpath/>
                                <argument>no.pax.drinkit.Client.WebCamClient</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>
</project>

